Update ECS_PING.java